[tool.poetry]
name = "fuel-tracker-bot-"
version = "0.1.0"
description = ""
authors = ["kirichenko dmitriy <kirichenko.dmitriy1977@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.20.0.post0"
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
alembic = "^1.16.1"
fastapi = "^0.115.12"
dotenv = "^0.9.9"
pydantic = {extras = ["full"], version = "^2.11.5"}
pydantic-settings = "^2.9.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
